--- a/rally-jobs/nova.yaml
+++ b/rally-jobs/nova.yaml
@@ -1154,6 +1154,24 @@
         failure_rate:
           max: 0
 
+  NovaFlavors.create_flavor_and_add_tenant_access:
+    -
+      args:
+        ram: 500
+        vcpus : 1
+        disk: 1
+      runner:
+        type: "constant"
+        concurrency: 2
+        times: 10
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 2
+      sla:
+        failure_rate:
+          max: 0
+
   NovaServers.boot_and_update_server:
     -
       args:
