--- a/rally-jobs/rally.yaml
+++ b/rally-jobs/rally.yaml
@@ -818,6 +818,8 @@
         times: 1000
         concurrency: 10
       sla:
+        max_avg_duration_per_atomic:
+          generate_100_names: 0.006
         failure_rate:
           max: 0
     -
@@ -828,6 +830,8 @@
         times: 500
         concurrency: 10
       sla:
+        max_avg_duration_per_atomic:
+          generate_1000_names: 0.046
         failure_rate:
           max: 0
     -
@@ -838,6 +842,34 @@
         times: 200
         concurrency: 10
       sla:
+        max_avg_duration_per_atomic:
+          generate_10000_names: 0.415
+        failure_rate:
+          max: 0
+
+  RallyProfile.calculate_atomic:
+    -
+      args:
+        number_of_atomics: 100
+      runner:
+        type: "constant"
+        times: 300
+        concurrency: 10
+      sla:
+        max_avg_duration_per_atomic:
+          calculate_100_atomics: 0.025
+        failure_rate:
+          max: 0
+    -
+      args:
+        number_of_atomics: 500
+      runner:
+        type: "constant"
+        times: 100
+        concurrency: 10
+      sla:
+        max_avg_duration_per_atomic:
+          calculate_500_atomics: 0.46
         failure_rate:
           max: 0
 
