--- a/rally-jobs/nova.yaml
+++ b/rally-jobs/nova.yaml
@@ -976,6 +976,21 @@
         failure_rate:
           max: 0
 
+  NovaKeypair.create_and_get_keypair:
+    -
+      args: {}
+      runner:
+        type: "constant"
+        times: 10
+        concurrency: 2
+      context:
+        users:
+          tenants: 3
+          users_per_tenant: 2
+      sla:
+        failure_rate:
+          max: 0
+
   NovaKeypair.boot_and_delete_server_with_keypair:
     -
       args:
